# Photomosaic

./: CMakeLists.txt  Makefile  README.md  libtiles.c  libtiles.h  mosaico.c
src/: libtiles.c  libtiles.h  mosaico.c
